--- a/3-paskaita/uzduotis/src/App.scss
+++ b/3-paskaita/uzduotis/src/App.scss
@@ -1,38 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&family=Roboto:wght@300;400&display=swap');
+
+h1, h2, p {
+  margin: 0;
+  padding: 0;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  font-family: 'Roboto';
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  h1 {
+    text-transform: uppercase;
+    font-family: 'Roboto Condensed';
+    font-weight: 400;
+    font-size: 2.3rem;
+    margin: 40px;
   }
-  to {
-    transform: rotate(360deg);
+
+  .product-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    row-gap: 50px;
+    column-gap: 20px;
+    margin: 0 100px;
   }
 }
