--- a/6-paskaita/src/index.scss
+++ b/6-paskaita/src/index.scss
@@ -1,4 +1,4 @@
-body {
+body, h1, h2, p {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
