--- a/7-paskaita/teorija/src/index.css
+++ b/7-paskaita/teorija/src/index.css
@@ -1,9 +1,6 @@
-
-body {
+body, h1, h2, p, input, button {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Arial';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
